# DjangoDashboard

./: .replit  Commands.txt  db.sqlite3  dependencies.md  install_dependencies.txt  pyproject.toml  requirements.txt  users_credentials.txt
attached_assets/: Pasted---1746952112537.txt  Pasted--Sidebar-with-conversation-list-div-class-col-lg-3-mb-4-mb-lg-0-di-1749999425345_1749999425346.txt  Pasted--div-class-conversation-list-style-max-height-70-1749972766630_1749972766630.txt  Pasted--div-class-conversation-list-style-max-height-70vh-overflow-y-auto--1749972696906_1749972696906.txt  Pasted--extends-base-html-load-static-load-listing-extras-load-humanize-block--1750000715866_1750000715868.txt  Pasted-Environment-Request-Method-GET-Request-URL-http-64417df1-ea7b-4c27-9cd2-02d30270a8ca-00-3-1748226932020.txt  Pasted-Environment-Request-Method-GET-Request-URL-https-1d065228-a3be-4516-ba40-65d7154ed0b8-00--1749916186732_1749916186732.txt  Pasted-Environment-Request-Method-GET-Request-URL-https-262cd1d6-a6d0-47db-bec8-f71d44f05358-00--1748507523273.txt  Pasted-Environment-Request-Method-GET-Request-URL-https-262cd1d6-a6d0-47db-bec8-f71d44f05358-00--1748507845977.txt  Pasted-Environment-Request-Method-GET-Request-URL-https-2a7ed7e4-3016-4268-b37f-22f207efb8d4-00--1750074005479_1750074005479.txt  Pasted-Environment-Request-Method-GET-Request-URL-https-341ebd7b-9914-4beb-b43c-46c58995421c-00--1748421821472.txt  Pasted-Environment-Request-Method-GET-Request-URL-https-38ab171c-c33a-45c3-9fb1-6f70c3f18a19-00--1749960929625_1749960929625.txt  (+42 more)
chat/: __init__.py  admin.py  forms.py  (+6 more)
(+161 files in other folders)
