[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "channels>=4.2.2",
    "channels-redis>=4.2.1",
    "django>=5.2.1",
    "django-extensions>=4.1",
    "django-filter>=25.1",
    "django-redis>=5.4.0",
    "djangorestframework>=3.16.0",
    "pillow>=11.2.1",
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
]
