[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "asgiref>=3.8.1",
    "channels>=4.2.2",
    "channels-redis>=4.2.1",
    "django>=5.2.1",
    "django-extensions>=4.1",
    "django-filter>=25.1",
    "django-redis>=5.4.0",
    "djangorestframework-simplejwt>=5.5.0",
    "djangorestframework>=3.16.0",
    "pillow>=11.2.1",
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
    "pytz>=2025.2",
    "redis>=6.0.0",
    "daphne>=4.2.0",
    "python-dateutil>=2.9.0.post0",
    "six>=1.17.0",
]
